--- a/frontend/web/css/pda.css
+++ b/frontend/web/css/pda.css
@@ -4,7 +4,7 @@ img {vertical-align:top;}
 
 /*Page layout*/
 .container-fluid {
-	margin-top:10px; margin-bottom:20px; min-width:600px; max-width:980px;
+	min-width:460px; max-width:980px;
 	background-color:#ffffff; box-shadow:0px 5px 10px rgba(0,0,0,0.2);}
 .header {height:65px; padding:5px 0;}
 .logo {}
@@ -17,8 +17,8 @@ img {vertical-align:top;}
 .categories a {font-size:1.4em; padding:0 10px;}
 .categories a, .categories a:hover, .categories a:active {color:#fff;}
 .inactive-category {color:#ccc;}
-.nav-tags {background-color:#7A797A;}
-.nav-tags a {font-size:1.1em; line-height:2em;}
+.nav-tags {background-color:#FCFAF3;}
+.nav-tags a {font-size:1.1em; line-height:2em; color:#848484;}
 a.label-tag {}
 a.label-tag-na {}
 a.label-tag:hover, a.label-tag-na:hover {color:#555; border-color:#555;}
@@ -48,8 +48,7 @@ a.label-tag:hover, a.label-tag-na:hover {color:#555; border-color:#555;}
 /*Content*/
 .item {margin:0 0 40px 0; clear:left;}
 .item-title a:hover {text-decoration:none;}
-.title-decoration .dleft {width:30%; border-top:#C3CEE0 2px solid;}
-.content-container td {vertical-align:top; padding:10px;}
+.title-decoration .dleft {width:50%; border-top:#C3CEE0 2px solid;}
 .item-nav { 
 	padding:10px; background:#EDEDED; 
 	-moz-border-radius:0 5px 5px 5px; -webkit-border-radius:0 5px 5px 5px; border-radius:0 5px 5px 5px;}
@@ -57,6 +56,7 @@ a.label-tag:hover, a.label-tag-na:hover {color:#555; border-color:#555;}
 	padding:8px; line-height:32px; background:#EDEDED;
 	-moz-border-radius:5px 5px 0 5px; -webkit-border-radius:5px 5px 0 5px; border-radius:5px 5px 0 5px;}
 .thumb-video {margin:0 15px;}
+.item-content {margin:15px 0;}
 .item-content ol, .post-content ol {list-style-type:none; counter-reset:num; }
 .item-content li, .post-content li {
 	margin:0 0 10px 0; padding:0 0 5px 10px;
@@ -65,17 +65,17 @@ a.label-tag:hover, a.label-tag-na:hover {color:#555; border-color:#555;}
 	content:counter(num); counter-increment:num;
 	padding:3px 5px; margin:0 5px 0 -28px; border-radius:3px 3px 0 3px; background:#DDE4EC;}
 .pagination-container {text-align:center;}
-.page-title {display:inline-block; position:relative; z-index:1; margin:40px 0; padding:5px 5px 5px 30px; font-size:3em;}
-.page-title::before {content:""; position:absolute; left:0px; top:1px; width:45px; height:45px; z-index:-1; background:#C3CEE0 none repeat scroll 0% 0%;}
+.page-title {display:inline-block; position:relative; z-index:1; margin:20px 0 0 0; padding:5px 5px 5px 15px; font-size:2.2em;}
+.page-title::before {content:""; position:absolute; left:0px; top:1px; width:35px; height:35px; z-index:-1; background:#C3CEE0 none repeat scroll 0% 0%;}
 .marker, .comments-marker {
 	display:inline-block; padding:5px 10px; font-size:1.8em; 
 	background-color:#DDE4EC; border-radius:5px 5px 0 5px;}
 .intro, .post-content {margin-bottom:20px;}
-.post {margin-bottom:30px;}
+.post {margin:15px 0 30px 0;}
 .content-container h2, .post h3 {margin:20px 0;} 
 .post a, #comments a {text-decoration:underline;}
 .post-content {}
-.content-image {margin-top:25px;}
+.content-image {margin-top:15px;}
 .content-image img {display: inline-block; padding: 5px;}
 .readmore {text-align:right; padding:10px 0;}
 .post-nav {
