--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -41,11 +41,14 @@ a.label-tag:hover, a.label-tag-na:hover {color:#555; border-color:#555;}
 	content:''; position:absolute; left:12px; top:auto; margin-top:-15px;
 	border:15px solid transparent; border-left:15px solid #A9A7A8;}
 .slider-next::after {border-left:15px solid #FCFAF3; left:10px;}
+.col-sm-offset-05 {margin-left:4.166666665%}
 .content {}
 .content-sidebar {padding:0;}
 .footer {height:60px; padding:20px; text-align:center; color:#ffffff; background-color:#888;}
 
 /*Content*/
+.blog-content {}
+.blog-item {margin-top:35px; overflow:hidden;}
 .item {margin:0 0 40px 0; clear:left;}
 .item-title a:hover {text-decoration:none;}
 .title-decoration .dleft {width:30%; border-top:#C3CEE0 2px solid;}
@@ -105,6 +108,7 @@ a.label-tag:hover, a.label-tag-na:hover {color:#555; border-color:#555;}
 
 /*Adv*/
 .a1 {height: 120px; margin:15px 0;}
+.a2 { margin:15px 0 30px;}
 
 /* ---- Slick ---- */
 /* Slider */
