--- a/frontend/web/css/pda.css
+++ b/frontend/web/css/pda.css
@@ -104,7 +104,7 @@ a.label-tag:hover, a.label-tag-na:hover {color:#555; border-color:#555;}
 .v-code .chr td {width: 3px; height: 3px; padding:0px; border: 1px solid #F2F2F2;}
 
 /*Adv*/
-.a1m {height: 280px; margin:15px 0;}
+.a1m {margin:15px 0;}
 .a2m {margin:15px 0 25px;}
 
 /* ---- Slick ---- */
