--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -107,8 +107,8 @@ a.label-tag:hover, a.label-tag-na:hover {color:#555; border-color:#555;}
 .v-code .chr td {width: 3px; height: 3px; padding:0px; border: 1px solid #F2F2F2;}
 
 /*Adv*/
-.a1 {height: 120px; margin:15px 0;}
-.a2 { margin:15px 0 30px;}
+.a1 {margin:15px 0;}
+.a2 {margin:15px 0 30px;}
 
 /* ---- Slick ---- */
 /* Slider */
