--- a/backend/web/css/site.css
+++ b/backend/web/css/site.css
@@ -96,3 +96,4 @@ a.desc:after {
 .id-col {width:60px;}
 .actions-col {width:60px;}
 .actions-col-wide {width:85px;}
+.comment-sch-id label{padding: 8px 0;}
