--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -144,7 +144,7 @@ strong {font-weight: 400}
 	background: #DCEBF2 none repeat scroll 0% 0%}
 .post, .post-comments, .item {margin-bottom: 20px}
 .intro, .post .section, .post-comments .section {margin-bottom: 20px}
-.section-image {text-align: center}
+.section-image {text-align: center; max-width: 270px;}
 .section-image img {margin: 20px 0}
 .section a, .comment a {text-decoration: underline}
 .section ol {list-style-type: none; counter-reset: num; }
